@@ -20,8 +20,18 @@ if (! isset ($config["id_user"])) {
 	exit ();
 }
 
+$autohidden_menu = 0;
+
+if (isset ($config["autohidden_menu"]) && $config["autohidden_menu"]) {
+	$autohidden_menu = 1;
+}
+
+if ($autohidden_menu) {
+	$menu_container_id = 'menu_container';
+}
+
 // Menu container prepared to autohide menu
-echo '<div id="menu_container_old">';
+echo '<div id="' . $menu_container_id . '">';
 
 echo '<div class="tit bg titop">:: '.__('Operation').' ::</div>';
 require ("operation/menu.php");
@@ -49,6 +59,9 @@ ui_require_jquery_file ('cookie');
 ?>
 <script type="text/javascript" language="javascript">
 /* <![CDATA[ */
+
+var autohidden_menu = <?php echo $autohidden_menu; ?>;
+
 $(document).ready( function() {
 	$("img.toggle").click (function () {
 		$(this).siblings ("ul").toggle ();
@@ -63,13 +76,13 @@ $(document).ready( function() {
 	function handlerIn() {
 		handsIn = 1;
 		if(openTime == 0) {
-			$('#menu_container').animate({"left": "+=140px"}, 200);
+			show_menu();
 			openTime = new Date().getTime();
 			
 			// Close in 1 second if is not closed manually
 			setTimeout(function() {
 				if(openTime > 0 && handsIn == 0) {
-					$('#menu_container').animate({"left": "-=140px"}, 100);
+					hide_menu();
 					openTime = 0;
 				}
 			}, 1000);
@@ -81,9 +94,40 @@ $(document).ready( function() {
 		var openedTime = new Date().getTime() - openTime;
 		
 		if(openedTime > 1000) {
-			$('#menu_container').animate({"left": "-=140px"}, 100);
+			hide_menu();
 			openTime = 0;
 		}
+	}
+	
+	function show_menu () {
+		$('#menu_container').animate({"left": "+=140px"}, 200);
+		show_menu_pretty();
+	}
+	
+	function show_menu_pretty() {
+		$('div.menu ul li').css('background-position', '');
+		$('ul.submenu li a, li.menu_icon a, li.links a').css('visibility', '');
+		$('.titop').css('color', 'white');
+		$('.bg3').css('color', 'white');
+		$('.bg4').css('color', 'white');
+	}
+	
+	function hide_menu () {
+		$('#menu_container').animate({"left": "-=140px"}, 100);
+		hide_menu_pretty();
+	}
+	
+	function hide_menu_pretty() {
+		$('div.menu li').css('background-position', '140px 3px');
+		$('ul.submenu li a, li.menu_icon a, li.links a').css('visibility', 'hidden');
+		$('.titop').css('color', $('.titop').css('background-color'));
+		$('.bg3').css('color', $('.bg3').css('background-color'));
+		$('.bg4').css('color', $('.bg4').css('background-color'));
+	}
+	
+	if (autohidden_menu) {
+		$('#main').css('margin-left', '40px');
+		hide_menu_pretty();
 	}
 });
 /* ]]> */
